--- a/GYAK/GYAK11/GYAK11.ipynb
+++ b/GYAK/GYAK11/GYAK11.ipynb
@@ -254,7 +254,7 @@
     "        image_h, image_w = image.shape\n",
     "        convolution_output = np.zeros((image_h-self.kernel_size+1, image_w-self.kernel_size+1, self.kernel_num))\n",
     "        for patch, h, w in self.patches_generator(image):\n",
-    "            convolution_output[h,w] = np.sum(patch * self.kernels)\n",
+    "            convolution_output[h,w] = np.sum(patch * self.kernels, axis=(1,2))\n",
     "        return convolution_output,self.kernels"
    ]
   },
